[change] - some comments added